--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello, Coursera!</title>
-</head>
-<body>
-<h1>Hello, Coursera!</h1>
-</body>
-</html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="style.css">
+		<title>Hello, Coursera!</title>
+	</head>
+
+	<body class="page-theme">
+		<h1>Я не знаю что мне делать с этим сайтом</h1>
+	</body>
+	</html>
