--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>Hello, World!</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="style.css">
+		<title>Hello, Coursera!</title>
+	</head>
+
+	<body class="page-theme">
+		<h1>Я не знаю что мне делать с этим сайтом</h1>
+	</body>
+	</html>
